--- a/package.json
+++ b/package.json
@@ -3,37 +3,53 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+		"dev": "next",
+		"dev:ts": "tsc --watch",
+		"start": "tsc && next build && next start",
+		"build": "tsc && next build",
+		"export": "tsc && next build && next export",
     "analyze": "ANALYZE=true next build",
-    "start": "next start",
-    "export": "next export",
-    "lint": "eslint . --ext .js,.jsx && prettier --check --use-tabs --tab-width=4 **/**.json",
-    "lintfix": "eslint --ext .js,.jsx --fix && prettier --write --use-tabs --tab-width=4 **/**.json"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && prettier --check --use-tabs --tab-width=4 **/**.json",
+    "lintfix": "eslint . --ext .js,.jsx,.ts,.tsx --fix && prettier --write --use-tabs --tab-width=4 **/**.json"
   },
   "dependencies": {
+    "@yearn-finance/web-lib": "^0.11.12",
     "@headlessui/react": "^1.4.3",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.1",
-    "autoprefixer": "^10.4.2",
-    "axios": "^0.25.0",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
     "dotenv-webpack": "^7.1.0",
-    "ethcall": "^4.3.2",
-    "ethers": "^5.5.4",
-    "next": "12.0.10",
-    "next-seo": "^5.1.0",
-    "postcss": "^8.4.6",
-    "react": "17.0.2",
-    "react-dom": "^17.0.2",
-    "sharp": "^0.30.0",
-    "tailwindcss": "^3.0.18"
+    "ethcall": "^4.8.2",
+    "ethers": "^5.6.9",
+    "next": "^12.2.3",
+    "next-pwa": "^5.5.4",
+    "next-seo": "^5.5.0",
+    "postcss-nesting": "^10.1.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.54.0",
+    "sharp": "^0.30.7",
+    "tailwindcss": "^3.1.6"
   },
   "devDependencies": {
-    "eslint": "^8.11.0",
-    "eslint-config-next": "^12.0.10",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-tailwindcss": "^3.3.6",
-    "prettier": "^2.6.0"
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-config-next": "^12.2.3",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.6.0",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "ts-loader": "^9.3.1",
+    "prettier": "^2.6.0",
+    "typescript": "^4.7.4"
   }
 }
