--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,14 +11,35 @@
 
 	"icons": [
 		{
+			"src": "./favicons/favicon.ico",
+			"type": "image/x-icon",
+			"purpose": "shortcut icon"
+		},
+		{
+			"src": "./favicons/apple-touch-icon.png",
+			"sizes": "180x180",
+			"type": "image/png",
+			"purpose": "apple-touch-icon"
+		},
+		{
 			"src": "./favicons/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png",
 			"purpose": "any maskable"
 		},
 		{
-			"src": "./favicons/android-icon-144x144.png",
-			"sizes": "144x144",
+			"src": "./favicons/favicon-6x16.png",
+			"sizes": "6x16",
+			"type": "image/png"
+		},
+		{
+			"src": "./favicons/favicon-32x32.png",
+			"sizes": "32x32",
+			"type": "image/png"
+		},
+		{
+			"src": "./favicons/android-chrome-192x192.png",
+			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
